# recsys-lite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml  test_ratings.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  main-check.yml  nightly.yml  pr-ci.yml  release.yml
docs/: Makefile  deployment_guide.md  developer_guide.md  educator_guide.md
docs/source/: api.rst  conf.py  index.rst
examples/: svd_math_demo.ipynb
src/recsys_lite/: __init__.py  algo.py  tools.py
src/vector_recsys_lite/: __init__.py  algo.py  benchmark.py  cli.py  explain.py  io.py  tools.py  utils.py
tests/: test_algo.py  test_benchmark.py  test_cli.py  test_io.py  test_tools.py
