[tool.poetry]
name = "vector_recsys_lite"
version = "0.1.4"
description = "🔥 Zero-dep NumPy SVD recommender + ANN benchmark (2 s on 100 k MovieLens)"
authors = ["Simbarashe Timire <stimire92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vector_recsys_lite", from = "src"}]
keywords = ["recommender-system", "svd", "numpy", "machine-learning", "collaborative-filtering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.scripts]
vector-recsys = "vector_recsys_lite.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
