[tool.poetry]
name        = "recsys-lite"
version     = "1.0.0"
description = "Lightweight recommender for teaching and small‑scale production"
authors     = ["Simbarashe Timire <stimire92@gmail.com>"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "recsys_lite", from = "src" }]

# ✨ Extra, highly recommended metadata
homepage     = "https://github.com/Lunexa-AI/recsys_lite"
repository   = "https://github.com/Lunexa-AI/recsys_lite"
documentation = "https://recsys-lite.readthedocs.io"
keywords     = ["recommender-system", "matrix-factorization", "python", "education"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Lunexa-AI/recsys_lite/issues"
"Changelog"   = "https://github.com/Lunexa-AI/recsys_lite/releases"

[tool.poetry.dependencies]
python = ">=3.9"
numpy  = ">=1.23"
scipy  = ">=1.9"
joblib = ">=1.3"
typer  = ">=0.9"
rich   = ">=13"

# --- Optional heavy deps split into extras
numba      = { version = ">=0.59", optional = true }
pandas     = { version = ">=2.2",  optional = true }
pyarrow    = { version = ">=16.1", optional = true }
h5py       = { version = ">=3.11", optional = true }
sqlalchemy = { version = ">=2.0",  optional = true }

[tool.poetry.extras]
parquet = ["pyarrow"]
hdf5    = ["h5py"]
sqlite  = ["sqlalchemy"]
all     = ["numba", "pandas", "pyarrow", "h5py", "sqlalchemy"]

# ---------- Dev & tooling groups ----------
[tool.poetry.group.dev.dependencies]
pytest      = "^8.4"
pytest-cov  = "^6.2"
pre-commit  = "^3.6"
ruff        = "^0.4"
black       = "^25"
isort       = "^5.13"
mypy        = "^1.10"
bandit      = "^1.7"
sphinx      = "^7"
"sphinx-rtd-theme" = "^2"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires      = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ----------- Plugins ------------
[tool.poetry.plugins."poetry.plugin"]
dynamic-versioning = "poetry_dynamic_versioning.plugin"

[tool.poetry_dynamic_versioning]
enable = true
style  = "pep440"   # tag v1.2.3 -> 1.2.3
